--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     <body>
         <section class="container principal">
             <div class="container__caixa">
-                <img src="img/techplus.png" alt="O combo+ é a junção do alura+ e o alura linguas" class ="container__imagem">
+                <img src="techplus.png" alt="O combo+ é a junção do alura+ e o alura linguas" class ="container__imagem">
                 <h1 class="container__titulo">Filmes sobre tecnologia que são indispensáveis para quem gosta da era digital!</h1>
-                <img src="img/chamada.png" alt="O combo+ é a junção do alura+ e o alura linguas" class ="container__imagem">
+                <img src="chamada.png" alt="O combo+ é a junção do alura+ e o alura linguas" class ="container__imagem">
                 <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 12,99*</a>
                 <a href="www.alura.com.br" class="container__botao botao__secundario">Assinar somente o Tech+</a>
                 <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
             </div>
+
         </section>
 
         <section class="container secundario">
-            <img src="img/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" >
+            <img src="Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" >
 
             <div class="container__descricao"> 
                 <h2 class="descricao__titulo ">Assista do seu jeito</h2>
@@ -39,7 +40,7 @@
                 <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
                     Só o tech+ oferece para você o acesso a filmes sobre tecnologia onde e como quiser.</p>
             </div>
-            <img src="img/Notebook.png" alt="Notebook" >
+            <img src="Notebook.png" alt="Notebook" >
 
         </section>
 
@@ -47,22 +48,22 @@
             <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
             <ul class="dispositivos__lista">
                 <li>
-                    <img src="img/tv.png" alt="Televisao">
+                    <img src="tv.png" alt="Televisao">
                     <h3 class="lista__item">TV</h3>
                 </li>
 
                 <li>
-                    <img src="IMG/computador.png" alt="computador">
+                    <img src="computador.png" alt="computador">
                     <h3 class="lista__item">Computadores</h3>
                 </li>
                 <li>
-                    <img src="IMG/celular.png" alt="celular">
+                    <img src="celular.png" alt="celular">
                     <h3 class="lista__item">Celulares e tablets</h3>
                 </li>
             </ul>
         </section>
         <footer class="rodape">
-            <img src="img/Logo.png" alt="Alura+" classe="rodape__logo">
+            <img src="Logo.png" alt="Alura+" classe="rodape__logo">
             <ul class="rodape__lista">
                 <li class="lista__link">
                     <a href="#" class="rodape__texto">Idiomas</a>
