Ajustando erro no footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
         </section>
         <footer class="rodape">
-            <img src="Logo.png" alt="Alura+" classe="rodape__logo">
+            <img src="techplus.png" alt="Tech+" classe="rodape__logo">
             <ul class="rodape__lista">
                 <li class="lista__link">
                     <a href="#" class="rodape__texto">Idiomas</a>
